--- a/FlappyBird/index.html
+++ b/FlappyBird/index.html
@@ -125,7 +125,7 @@
 
 					if( i === 0 ) {
 						var cx  = Math.min( Math.max( bird.x , p.x ) , p.x+p.width );
-						var cy1 = Math.min( Math.max( bird.y , p.y ) , p.y+p.width );
+						var cy1 = Math.min( Math.max( bird.y , p.y ) , p.y+p.height );
 						var cy2 = Math.min( Math.max( bird.y , p.y+p.height+80 ) , p.y+2*p.height+80 );
 
 						var dx  = bird.x - cx;
