--- a/FlappyBird/index.html
+++ b/FlappyBird/index.html
@@ -45,6 +45,8 @@
 			Splash: 0, Game: 1, Score: 2
 		},
 
+		okbtn,
+
 		bird = {
 
 			x: 60,
@@ -124,6 +126,9 @@
 					var p = this._pipes[i];
 
 					if( i === 0 ) {
+
+						score += p.x === bird.x ? 1 : 0;
+
 						var cx  = Math.min( Math.max( bird.x , p.x ) , p.x+p.width );
 						var cy1 = Math.min( Math.max( bird.y , p.y ) , p.y+p.height );
 						var cy2 = Math.min( Math.max( bird.y , p.y+p.height+80 ) , p.y+2*p.height+80 );
@@ -171,6 +176,18 @@
 				break;
 
 				case states.Score:
+				var mx = evt.offsetX , my = evt.offsetY;
+
+				if( mx == null || my == null ) {
+					mx = evt.touches[0].clientX;
+					my = evt.touches[0].clientY;
+				}
+
+				if( okbtn.x < mx && mx < okbtn.x + okbtn.width && okbtn.y < my && my < okbtn.y + okbtn.height ) {
+					pipes.reset();
+					currentstate = states.Splash;
+					score = 0;
+				}
 				break;
 			}
 		}
@@ -202,6 +219,14 @@
 			img.onload = function() {
 				initSprites( this );
 				ctx.fillStyle = s_bg.color;
+
+				okbtn = {
+					x: ( width - s_buttons.Ok.width ) / 2,
+					y: height - 200,
+					width: s_buttons.Ok.width,
+					height: s_buttons.Ok.width,
+				};
+
 				run();
 			}
 			img.src = "res/sheet.png";
@@ -219,6 +244,9 @@
 
 			if( currentstate !== states.Score ) {
 				fgpos = ( fgpos - 2 ) % 14;
+			}
+			else {
+				best = Math.max( score , best );
 			}
 			if( currentstate === states.Game ) {
 				pipes.update();
@@ -243,6 +271,18 @@
 			if( currentstate === states.Splash ) {
 				s_splash.draw( ctx , width2 - s_splash.width/2 , height - 300 ); 
 				s_text.GetReady.draw( ctx , width2 - s_text.GetReady.width/2 , height - 380 );
+			}
+
+			if( currentstate === states.Score ) {
+				s_text.GameOver.draw( ctx , width2 - s_text.GameOver.width/2 , height - 400 );
+				s_score.draw( ctx , width2 - s_score.width/2 , height - 340 );
+				s_buttons.Ok.draw( ctx , okbtn.x , okbtn.y );
+
+				s_numberS.draw( ctx , width2 - 47 , height - 304 , score , null , 10 );
+				s_numberS.draw( ctx , width2 - 47 , height - 262 , best , null , 10 );
+			}
+			else {
+				s_numberB.draw( ctx , null , 20 , score , width2 );
 			}
 		}
 		main();
