--- a/FlappyBird/index.html
+++ b/FlappyBird/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="mobile-web-app-capable" content="yes">
 
-	<title>Hi</title>
+	<title>Home</title>
 
 	<script src="sprite.js"></script>
 
@@ -24,8 +27,8 @@
 	</style>
 </head>
 
-<body>
-	<!-- <a id="jukebox" href="jukebox.php">Click to go to Jukebox</a> -->
+<body background="background.jpg">
+	<a id="jukebox" href="jukebox.php">Click to go to Jukebox</a>
 
 	<script>
 		var
